Implementação da camada Service, classe Model UsuarioLogin, classe SecurityConfig